syntax = "proto3";

// 加快解析
option optimize_for = SPEED;
option java_package = "cn.chasers.wehappy.common.msg";
option java_outer_classname = "ProtoMsg";

// 消息类型
enum MessageType {
  // 私聊消息，客户端请求
  SINGLE_MESSAGE = 0;
  // 群聊消息，客户端请求
  GROUP_MESSAGE = 1;
  // 响应消息，服务端响应
  RESPONSE_MESSAGE = 2;
  // 推送消息，服务端发送
  PUSH_MESSAGE = 3;
}

// 聊天消息类型
enum ContentType {
  // 文本消息
  TEXT = 0;
  // 系统消息
  SYSTEM_MSG = 1;
  // 图片消息
  IMAGE = 2;
  // 语音消息
  VOICE = 3;
  // 视频消息
  VIDEO = 4;
  // 语音通话
  VOICE_CALL = 5;
  // 视频通话
  VIDEO_CALL = 6;
  // 私聊红包
  SINGLE_RED_ENVELOPE = 7;
  // 群聊运气红包
  UNFAIR_RED_ENVELOPE = 8;
}

// 聊天消息
message ChatMessage {
  // 发送者id
  string from = 1;
  // 群聊表示群Id，私聊表示用户Id
  string to = 2;
  // 消息类型
  ContentType contentType = 3;
  // 文本消息表示内容，图片视频消息表示链接
  string content = 4;
}

// 响应消息
message ResponseMessage {
  // 发送成功或失败
  bool result = 1;
  // 错误码
  int32 code = 2;
  // 错误描述
  string info = 3;
  // 错误描述是否提示给用户
  bool expose = 4;
}

// 推送消息
message PushMessage {
  // 消息类型
  ContentType contentType = 2;
  // 文本消息表示内容，图片视频消息表示链接
  string content = 3;
}

// 外层消息
message Message {
  // 序列号,服务端生成,用于消息排序
  string sequence = 1;
  // 消息id,由客户端生成,用于消息确认
  string id = 2;
  // 时间戳
  string time = 3;
  // 消息类型
  MessageType messageType = 4;
  // 发送给的用户的Id
  string to = 5;
  // 聊天消息
  ChatMessage chatMessage = 6;
  // 响应消息
  ResponseMessage responseMessage = 7;
  // 推送消息
  PushMessage pushMessage = 8;
}
